--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
         <title>React App</title>
     </head>
     <body>
-        <div id="react-app"></div>
+        <div id="root"></div>
     </body>
 </html>
